Fix sudden columns width jumps; set individual initial column widths

--- a/website/src/page/admin/adminStyles.css
+++ b/website/src/page/admin/adminStyles.css
@@ -11,13 +11,8 @@ table.admin {
     max-content
     max-content
     minmax(100px, max-content);
-  /* minmax(100px, max-content)
-    minmax(100px, max-content)
-    minmax(200px, max-content)
-    minmax(100px, max-content); */
-  /* border-collapse: collapse; /* Seems to have no effect*/
+
   gap: 0.2rem;
-  /* padding: "8px"; /* Seems to have no effect*/
 }
 
 table.admin th {
@@ -66,7 +61,7 @@ input.valid {
   display: block;
   position: absolute;
   cursor: col-resize;
-  width: 7px;
+  width: 10px;
   right: 0;
   top: 0;
   z-index: 1;
